// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render and handle clicks correctly 1`] = `
<div
  class="navigation"
>
  <div
    class="header"
  >
    <div
      class="headerContent"
    >
      <span
        aria-label="su-sulu"
        class="su-sulu headerIcon"
      />
      <span
        class="headerTitle"
      >
        sulu.io
      </span>
    </div>
  </div>
  <div
    class="user"
  >
    <div
      class="userContent"
    >
      <button
        class="noUserImage"
      >
        <span
          aria-label="fa-user"
          class="fa fa-user"
        />
      </button>
      <div
        class="userProfile"
      >
        <button
          class="username"
        >
          John Terence Maximilian Travolta
        </button>
        <button
          class="logout"
        >
          <span
            aria-label="su-exit"
            class="su-exit"
          />
          Log out
        </button>
      </div>
    </div>
  </div>
  <div
    class="items"
  >
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-search"
          class="su-search"
        />
        Search
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-bullseye"
          class="fa fa-bullseye"
        />
        Webspaces
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      class="versions"
    >
      <div>
        Sulu (
        <a
          href="http://link.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          2.0.0-RC1
        </a>
        )
      </div>
    </div>
  </div>
</div>
`;

exports[`The component should render with all available props and handle clicks correctly 1`] = `
<div
  class="navigation"
>
  <div
    class="header"
  >
    <div
      class="headerContent"
    >
      <span
        aria-label="su-sulu"
        class="su-sulu headerIcon"
      />
      <span
        class="headerTitle"
      >
        sulu.io
      </span>
    </div>
  </div>
  <div
    class="user"
  >
    <div
      class="userContent"
    >
      <img
        src="http://lorempixel.com/200/200"
        title="John Travolta"
      />
      <div
        class="userProfile"
      >
        <button
          class="username"
        >
          John Travolta
        </button>
        <button
          class="logout"
        >
          <span
            aria-label="su-exit"
            class="su-exit"
          />
          Log out
        </button>
      </div>
    </div>
  </div>
  <div
    class="items"
  >
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-search"
          class="su-search"
        />
        Search
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-webspace"
          class="su-webspace"
        />
        Webspaces
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-image"
          class="fa fa-image"
        />
        Media
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-newspaper-o"
          class="fa fa-newspaper-o"
        />
        Article
      </div>
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-sticky-note-o"
          class="fa fa-sticky-note-o"
        />
        Snippets
      </div>
    </div>
    <div
      class="item active"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="su-user-1"
          class="su-user-1"
        />
        Contact
      </div>
      <div>
        <div
          class="item"
        >
          <div
            class="title"
            role="button"
          >
            Contact 1
          </div>
        </div>
        <div
          class="item active"
        >
          <div
            class="title"
            role="button"
          >
            Contact 2
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="title"
            role="button"
          >
            Contact 3
          </div>
        </div>
      </div>
      <span
        aria-label="su-angle-down"
        class="su-angle-down clickable childrenIndicator"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          aria-label="fa-gear"
          class="fa fa-gear"
        />
        Settings
      </div>
      <span
        aria-label="su-angle-right"
        class="su-angle-right clickable childrenIndicator"
        role="button"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="footer"
  >
    <button
      class="button icon pin"
      type="button"
    >
      <span
        aria-label="fa-thumb-tack"
        class="fa fa-thumb-tack buttonIcon pinIcon"
      />
    </button>
    <div
      class="versions"
    >
      <div>
        sulu.io (
        <a
          href="http://link.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          1.0.0
        </a>
        )
      </div>
      <div>
        Sulu (
        <a
          href="http://link.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          2.0.0-RC1
        </a>
        )
      </div>
    </div>
  </div>
</div>
`;
